refactor(telegram): separate outbound text and photo recording logic
- Extract recordOutboundText and recordOutboundPhotos methods for clearer structure
- Call these methods on complete and error streaming response handlers
- Track sent images with message ID and URL pairs in TelegramStreamingReplyEmitter
- Persist outbound photos individually after successful send
- Replace List#get with LinkedList#getLast for last message ID retrieval